<resources>
    <string name="app_name">Calculator2</string>
    <string name="lbl_number1">Number 01</string>
    <string name="lbl_number2">Number 02</string>
    <string name="edt_number1">23</string>
    <string name="edt_number2">12</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Mul">*</string>
    <string name="btn_Devide">/</string>
</resources>